--- a/bahiaprincipeambar.html
+++ b/bahiaprincipeambar.html
@@ -63,7 +63,7 @@
 	This hotel is only for 18+ years (no kids allowed). Is an exclusive hotel for adults to enjoy!
 	</p>
 	<p>
-	In the corner of the website you'll see three buttons, those are restaurants in the hotel that you can check out and learn from them. Schedule is included.
+	In the corner of the website you'll see three buttons; those are restaurants in the hotel that you can check out and learn from them. Schedule is included.
 	</p>
 	<p>&nbsp;</p>
     </div>
