--- a/bahiaprincipeesmeralda.html
+++ b/bahiaprincipeesmeralda.html
@@ -54,7 +54,7 @@
 	<div style="display: inline-block; background-color: #003399;">
 	<h1>Welcome to Bahia Principe Esmeralda!</h1>
 	<p>
-	In these hotel you'll find one of the luxurios furniture ever! Its Check-In is after 3:00 pm. Check-Out is at 12:00 pm.
+	In this hotel, you'll find one of the most luxurious furniture ever! Check-In is after 3:00 pm and Check-Out is at 12:00 pm.
 	</p>
 	<p>
 	Here is a photo of how the bedrooms look like in this hotel:
@@ -63,10 +63,10 @@
 	<img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/07/4a/0c/86/luxury-bahia-principe.jpg?w=700&h=-1&s=1" alt = "Esmeralda bedroom1" style="width: 700px; height: 467px;">
 	</p>
 	<p>
-    In Bahia Principe Esmeralda you'll have access to plenty of pools, entertainment areas, and a variety of restaurants.
+    In Bahia Principe Esmeralda you'll have access to: plenty of pools, entertainment areas, and a variety of restaurants.
 	</p>
 	<p>
-	In the corner of the website you'll see three buttons, those are restaurants in the hotel that you can check out and learn from them. Schedule is included.
+	In the corner of the website you'll see three buttons; those are restaurants in the hotel that you can check out and learn from them. Schedule is included.
 	</p>
 	<p>&nbsp;</p>
     </div>
