--- a/capriccio.html
+++ b/capriccio.html
@@ -54,13 +54,13 @@
 	<div style="display: inline-block; background-color: #003399;">
 	<h1>Capriccio Restaurant</h1>
 	<p>
-	This is an Italian Restaurant, one of a few that is located in the hotel. 
+	This is an Italian Restaurant, one of the few that is located in the hotel. 
 	</p>
 	<p>
 	<img src="https://media-cdn.tripadvisor.com/media/photo-p/13/79/ae/1a/comida-italiana-excelente.jpg" alt = "italian-restaurant" style="width: 550px; height: 550px";>
 	</p>
 	<p>
-	A traditional italian cuisine. Taste the italian dishes in the caribbean. Semi-formal clothing is required. 
+	It has traditional italian cuisine that you can savour in the Caribbean. Semi-formal clothes are required. 
 	</p>
 	<p>
 	This restaurant opens at 8:00 pm.
