--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <div id="tswcssbuttons">
           <ul>
             <li><a href="dicebahia.html" style="margin-left: 1388px; width: 323px;">Special Dice</a></li>
+            <li><a href="bahiapong.html" style="margin-left: 1388px; width: 323px;">Pong!</a></li>
           </ul>
         </div>
         <p></p>
