--- a/lasolasrestaurant.html
+++ b/lasolasrestaurant.html
@@ -54,16 +54,16 @@
 	<div style="display: inline-block; background-color: #003399;">
 	<h1>Las Olas Restaurant</h1>
 	<p>
-	This is a Brazilian grilled meat served in tableside. Sometimes in daytime, this place becomes the buffet for the beach.
+	This is a Brazilian Grill restaurant, served at the tableside. Sometimes in the daytime, it becomes an all-you-can-eat buffet for the people at the beach.
 	</p>
 	<p>
 	<img src="https://www.bahiaprincipeluxuryesmeralda.com/images/slides/slide-18.jpg" alt = "olasrestaurant" style="width: 1400px; height: 650px;">
 	</p>
 	<p>
-	This restaurant has a formal dress code and it is required to do a reservation. 
+	This restaurant has a formal dress code and requires a reservation. 
 	</p>
 	<p>
-	Their schedule is at night, from 7:30 pm or 8:00 pm.
+	They open at night at 7:30 pm or 8:00 pm.
 	</p>
 	<p>&nbsp;</p>
     </div>
