--- a/mainbuffetlarimar.html
+++ b/mainbuffetlarimar.html
@@ -54,16 +54,16 @@
 	<div style="display: inline-block; background-color: #003399;">
 	<h1>Main Buffet Larimar</h1>
 	<p>
-	This is an international buffet. Stay comfy in this awesome atmosphere.
+	This is an international buffet; you will feel comfy in this awesome atmosphere.
 	</p>
 	<p>
 	<img src="https://media-cdn.tripadvisor.com/media/photo-s/14/73/31/2d/larimar-v18560795.jpg" alt = "buffetlarimar" style="width: 550px; height: 450px;">
 	</p>
 	<p>
-	This buffet has 3 different schedules. Breakfeast: 7:00 am - 10:30 am. Lunch: 12:30 pm - 3:00 pm. Dinner: 7:00 pm - 11:00 pm.
+	This buffet has 3 different times it opens for meals: breakfast is from 7:00 am to 10:30 am, lunch is from 12:30 pm to 3:00 pm and dinner is from 7:00 pm to 11:00 pm.
 	</p>
 	<p>
-	In here you'll need to be wearing footwear and cover-up or t-shirt. 
+	In here you'll need to be wearing shoes and cover-up or t-shirt. 
 	</p>
 	<p>&nbsp;</p>
     </div>
