--- a/thegreek.html
+++ b/thegreek.html
@@ -53,16 +53,16 @@
 	<div style="display: inline-block; background-color: #003399;">
 	<h1>The Greek</h1>
 	<p>
-	As the name says, this restaurant is a Greece theme that you can taste the sweetness of it in the Caribbean.
+	As the name says, this is a Greek restaurant that you can enjoy the delicious dishes from Greece right in the Caribbean.
 	</p>
 	<p>
 	<img src="https://www.bahiaprincipeluxuryesmeralda.com/images/slides/slide-21.jpg" alt = "greek-restaurant" style="width: 1440px; height: 900px;">
 	</p>
 	<p>
-	This restaurant requires a reservation and it need a semi-formal clothing. 
+	This restaurant requires a reservation and needs semi-formal clothes. 
 	</p>
 	<p>
-	The time to arrive its at 8:00 pm.
+	It opens at 8:00 pm.
 	</p>
 	<p>
 		The restaurant is located in Bahia Principe Grand Bavaro.
