--- a/bahiaprincipefantasia.html
+++ b/bahiaprincipefantasia.html
@@ -54,19 +54,19 @@
 	<div style="display: inline-block; background-color: #003399;">
 	<h1>Welcome to Bahia Principe Fantasia!</h1>
 	<p>
-	This hotel contains lots of entertainment, mostly for children, and a wonderful experience!
+	This hotel contains a lot of entertainment for children mostly but is still a wonderful experience!
 	</p>
 	<p>
-	In the following you'll see a peek of the rooms in this hotel:
+	Below you'll see a peek of the rooms in this hotel:
 	</p>
 	<p>
 	<img src=" https://www.bahia-principe.com/content/image/m/1418240329415/256fantasia.jpg" alt = "Fantasia bedroom1" style="width: 600px; height: 400px;">
 	</p>
 	<p>
-	Bahia Principe Fantasia is one of the exclusive hotels in wich by having this access, you can enter any hotels in the area (If you're under 18, you can't enter Bahia Principe Ambar).
+	Bahia Principe Fantasia is one of the exclusive hotels which having access to it, you can enter any hotels in the area (If you're under 18, you can't enter Bahia Principe Ambar).
 	</p>
 	<p>
-	In the corner of the website you'll see three buttons, those are restaurants in the hotel that you can check out and learn from them. Schedule is included.
+	In the corner of the website you'll see three buttons; those are the restaurants in the hotel that you can check out and learn about. They also include the times they open.
 	</p>
 	<p>&nbsp;</p>
     </div>
